<resources>
    <string name="app_name">RapiRecetas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="general">General</string>
    <string name="home">Inicio</string>
    <string name="my_account">Mi Cuenta</string>
    <string name="profile">Perfil</string>
    <string name="favorites">Favoritos</string>
    <string name="other">Otros</string>
    <string name="categories">Categorias</string>
    <string name="editTextNombre">Nombre</string>
    <string name="editTextDescripcionCorta">Descripcion Corta</string>
    <string name="editTextDescripcion">Descripcion</string>
    <string name="editTextIngredientes">Ingredientes</string>
    <string name="editTextPasos">Pasos</string>
    <string name="save_btn">Guardar</string>
    <string name="lista_recetas">Recetas</string>
</resources>