<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/general"
        >
        <menu>
            <item
                android:id="@+id/home"
                android:title="@string/home"
                android:icon="@drawable/ic_home"
                />
            <item
                android:id="@+id/categories"
                android:title="@string/categories"
                android:icon="@drawable/ic_categories"
                />


        </menu>
    </item>

    <item
        android:title="@string/my_account"
        >
        <menu>
            <item
                android:id="@+id/profile"
                android:title="@string/profile"
                android:icon="@drawable/ic_profile"
                />
            <item
                android:id="@+id/favorites"
                android:title="@string/favorites"
                android:icon="@drawable/ic_favorites"
                />
        </menu>


    </item>

    <item
        android:title="@string/other"
        >
        <menu>
            <item
                android:id="@+id/creditos"
                android:title="Sobre RapiRecetas"
                android:icon="@drawable/ic_info"
                />
        </menu>


    </item>


</menu>