<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:title="@string/general"
        >
        <menu>
            <item
                android:id="@+id/nav_home"
                android:title="@string/home"
                android:icon="@drawable/ic_home"
                />
            <item
                android:id="@+id/nav_categories"
                android:title="@string/categories"
                android:icon="@drawable/ic_categories"
                />
            <item
                android:id="@+id/nav_lista_recetas_online"
                android:title="@string/lista_recetas"
                android:icon="@drawable/ic_format_list_numbered_24"
                />


        </menu>
    </item>

    <item
        android:title="@string/my_account"
        >
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:title="@string/profile"
                android:icon="@drawable/ic_profile"
                />
            <item
                android:id="@+id/nav_favorites"
                android:title="@string/favorites"
                android:icon="@drawable/ic_favorites"
                />
            <item
                android:id="@+id/nav_mis_recetas"
                android:title="Mis Recetas"
                android:icon="@drawable/ic_baseline_menu_book_24"
                />
        </menu>


    </item>

    <item
        android:title="@string/other"
        >
        <menu>
            <item
                android:id="@+id/nav_creditos"
                android:title="Sobre RapiRecetas"
                android:icon="@drawable/ic_info"
                />
        </menu>


    </item>
</menu>